# coderef

./: CMakeLists.txt  README.md
C函数/: CMakeLists.txt  fgetc.c  fgets.c  fscanf.c  getline.c  getopt.c  sscanf.c  writen.c
Tai/: CMakeLists.txt  tai.cpp  tai.h  tai_conv.cpp  tai_test.cpp
can/: can_read.c  can_write.c
curl/: CMakeLists.txt  README.md  hctest.cpp
curl/http/: CMakeLists.txt  httpclient.cpp  httpclient.h
curl/下载/: CMakeLists.txt  README.md  demo_easy_1.c  demo_multi_1.c  demo_multi_2.c  demo_multi_3.c  demo_multi_libevent.c
curl/表单/: CMakeLists.txt  README.md  demo_formadd_1.c  demo_formadd_1.html  demo_formadd_2.c  demo_formadd_2.html  demo_formadd_2.php  demo_formadd_3.c  demo_formadd_3.html  demo_formadd_3.php  demo_formadd_4.c  demo_formadd_4.html  demo_formadd_4.php  demo_formadd_5.c  demo_formadd_5.html  demo_formadd_6.c  demo_formadd_6.html  demo_formadd_6.php
产生临时文件/: CMakeLists.txt  README.md  mkstemp.c  tmpnam.c
命令行/: CMakeLists.txt  README.md  cldetect.h  cltest.cpp  detect.cpp
字符串处理/: CMakeLists.txt  README.md  backslash.cpp  rm_header_footer.cpp  split.c  split.cpp  strip.cpp  strnocasecmp.cpp  to_array.cpp  trim_space.cpp  wipeoff_colon.cpp
工具/: CMakeLists.txt  benchmark.c  cb_test.c  dec2bin_offset.c  dec2chars_len.c  euclid.c  first_zero.c  gcd.c  hex_dump.c  nonce_ctr.c  random64.c
文件操作/: CMakeLists.txt  rwfile.cpp
日志/: CMakeLists.txt  README.md
日志/C/: CMakeLists.txt  log.c  log.h  log_test.c
日志/CXX/: CMakeLists.txt  asynclog.cpp  asynclog.h  asynctest.cpp  cxxlog.cpp  cxxlog.h  cxxtest.cpp  synclog.cpp
时间/: CMakeLists.txt  month_rotate.cpp  msleep.c  time_api.c  time_conver.c  time_delta.c  time_joint.c  timer.cpp
正交码/: CMakeLists.txt
正交编码/: orthocode.cpp
注意/: CMakeLists.txt  不要刻板地使用二级指针.c  二级指针的传递及自运算.c  任何一条线程exit会导致进程内所有线程的退出.c  值保留原则bug.c  函数入栈顺序影响静态变量初始化.c  函数指针的传递.c  利用结构体偏移取值.c  回调函数测试.c  柔性数组解决内存浪费.c  类型的强制转换.c  结构体与指向这个结构体的指针.c  野指针未初始化.c  静态变量定义语句只调用一次.c
测试/: CMakeLists.txt  big_lit_endian.c  byte_align.c  memory_increase.c  memory_maxmalloc.cpp  sizeof_increment.c  three_dimensional_array.c
线程池/: README.md  post_task.cpp  threadpool.cpp  threadpool.h  tp_cond_mutex.cpp  tp_log.cpp
编解码/: CMakeLists.txt  base64.h  test_base64.cpp
转换/: CMakeLists.txt  hex_bin_conv.cpp  hex_bin_convert.cpp  hex_integral_convert.cpp  ipstr_int_convert.cpp
