
cmake_minimum_required(VERSION 2.8)

add_subdirectory(编解码)
add_subdirectory(Tai)
add_subdirectory(C函数)
add_subdirectory(日志)
add_subdirectory(命令行)
add_subdirectory(工具)
add_subdirectory(时间)
add_subdirectory(转换)
add_subdirectory(字符串处理)
add_subdirectory(产生临时文件)
add_subdirectory(测试)
add_subdirectory(注意)
add_subdirectory(curl)
add_subdirectory(正交编码)
add_subdirectory(文件操作)

